# rocketgrep

./: .gitignore  Cargo.toml  PULL_REQUEST.md  README.md
.github/workflows/: release.yml
benchmarks/: hyperfine_rocketgrep.ps1
src/: approx.rs  index.rs  lib.rs  main.rs  matcher.rs  output.rs  pillar.rs  searcher.rs  seaweed.rs  walk.rs
tests/: cli.rs
