[package]
name = "rocketgrep"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "A high-performance grep-style CLI with native edit-distance search."
license = "MIT OR Apache-2.0"
repository = "https://github.com/priceds/rocketgrep"
homepage = "https://github.com/priceds/rocketgrep"
readme = "README.md"
keywords = ["grep", "search", "fuzzy", "levenshtein", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    "PULL_REQUEST.md",
    "benchmarks/",
]

[lib]
name = "rocketgrep"
path = "src/lib.rs"

[[bin]]
name = "rocketgrep"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bstr = "1.9"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
ignore = "0.4"
memchr = "2.7"
memmap2 = "0.9"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
